pull/121/_sources/api/ansys/mechanical/stubs/v251/Ansys/ACT/Automation/Mechanical/MeshControls/Washer.rst.txt
.. vale off



:class:`Washer`
===============

.. py:class:: ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.MeshControls.Washer

   Bases: :py:obj:`object`


   
   Defines a Washer.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: Washer

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddComment`
            - Creates a new child Comment.
          * - :py:attr:`~AddFigure`
            - Creates a new child Figure.
          * - :py:attr:`~AddImage`
            - Creates a new child Image.
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateParameter`
            - Creates a new parameter for a Property.
          * - :py:attr:`~Delete`
            - Run the Delete action.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~GenerateMesh`
            - Generate the Mesh.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.
          * - :py:attr:`~RenameBasedOnDefinition`
            - Run the RenameBasedOnDefinition action.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~Comments`
            - Gets the list of associated comments.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~ElementSize`
            - Gets or sets the Quad Layer Element Size.
          * - :py:attr:`~FaceNamedSelection`
            - Gets or sets the Named Selection for Quad Layer Direction Face Scoping.
          * - :py:attr:`~FaceScopingMethod`
            - Gets or sets the face scoping method for Quad Layer Direction.
          * - :py:attr:`~FaceSelection`
            - Gets or sets the Quad Layer Direction Face Geoemetry Selection.
          * - :py:attr:`~Figures`
            - Gets the list of associated figures.
          * - :py:attr:`~FirstLayerHeight`
            - FirstLayerHeight property.
          * - :py:attr:`~GrowthRate`
            - GrowthRate property.
          * - :py:attr:`~Images`
            - Gets the list of associated images.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~LayerTransitionType`
            - LayerTransitionType property.
          * - :py:attr:`~Location`
            - Gets or sets the Location.
          * - :py:attr:`~MinimumNumberOfDivisions`
            - MinimumNumberOfDivisions property.
          * - :py:attr:`~NamedSelection`
            - Gets or sets the NamedSelection.
          * - :py:attr:`~NumberOfDivisions`
            - NumberOfDivisions property.
          * - :py:attr:`~NumberOfLayers`
            - NumberOfLayers property.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~QuadLayerDefeatureProximityTolerance`
            - QuadLayerDefeatureProximityTolerance property.
          * - :py:attr:`~QuadLayerDirection`
            - Gets or sets the Quad Layer Direction.
          * - :py:attr:`~QuadLayerType`
            - Gets or sets the Quad Layer Type.
          * - :py:attr:`~Relaxation`
            - Gets or sets the relaxation of Quad Layer.
          * - :py:attr:`~ScaleOfDiameter`
            - ScaleOfDiameter property.
          * - :py:attr:`~ScopingMethod`
            - Gets or sets the ScopingMethod.
          * - :py:attr:`~Suppressed`
            - Gets or sets the Suppressed.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.
          * - :py:attr:`~WasherAutoDefeature`
            - WasherAutoDefeature property.
          * - :py:attr:`~WasherHeightType`
            - WasherHeightType property.
          * - :py:attr:`~WasherMethod`
            - WasherMethod property.







Property detail
---------------
.. py:property:: Children
   :type: Optional[List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]


   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: Comments
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Comment]]


   
   Gets the list of associated comments.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]


   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: ElementSize
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the Quad Layer Element Size.
















   ..
       !! processed by numpydoc !!

.. py:property:: FaceNamedSelection
   :type: Optional[Ansys.ACT.Automation.Mechanical.NamedSelection]


   
   Gets or sets the Named Selection for Quad Layer Direction Face Scoping.
















   ..
       !! processed by numpydoc !!

.. py:property:: FaceScopingMethod
   :type: Optional[Ansys.Mechanical.DataModel.Enums.GeometryDefineByType]


   
   Gets or sets the face scoping method for Quad Layer Direction.
















   ..
       !! processed by numpydoc !!

.. py:property:: FaceSelection
   :type: Optional[Ansys.ACT.Interfaces.Common.ISelectionInfo]


   
   Gets or sets the Quad Layer Direction Face Geoemetry Selection.
















   ..
       !! processed by numpydoc !!

.. py:property:: Figures
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Figure]]


   
   Gets the list of associated figures.
















   ..
       !! processed by numpydoc !!

.. py:property:: FirstLayerHeight
   :type: Optional[Ansys.Core.Units.Quantity]


   
   FirstLayerHeight property.
















   ..
       !! processed by numpydoc !!

.. py:property:: GrowthRate
   :type: Optional[float]


   
   GrowthRate property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Images
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Image]]


   
   Gets the list of associated images.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSMeshControlAuto]


   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: LayerTransitionType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.LayerTransitionType]


   
   LayerTransitionType property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Location
   :type: Optional[Ansys.ACT.Interfaces.Common.ISelectionInfo]


   
   Gets or sets the Location.
















   ..
       !! processed by numpydoc !!

.. py:property:: MinimumNumberOfDivisions
   :type: Optional[int]


   
   MinimumNumberOfDivisions property.
















   ..
       !! processed by numpydoc !!

.. py:property:: NamedSelection
   :type: Optional[Ansys.ACT.Automation.Mechanical.NamedSelection]


   
   Gets or sets the NamedSelection.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfDivisions
   :type: Optional[int]


   
   NumberOfDivisions property.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfLayers
   :type: Optional[int]


   
   NumberOfLayers property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: QuadLayerDefeatureProximityTolerance
   :type: Optional[Ansys.Core.Units.Quantity]


   
   QuadLayerDefeatureProximityTolerance property.
















   ..
       !! processed by numpydoc !!

.. py:property:: QuadLayerDirection
   :type: Optional[Ansys.Mechanical.DataModel.Enums.QuadLayerDirection]


   
   Gets or sets the Quad Layer Direction.
















   ..
       !! processed by numpydoc !!

.. py:property:: QuadLayerType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.QuadLayerType]


   
   Gets or sets the Quad Layer Type.
















   ..
       !! processed by numpydoc !!

.. py:property:: Relaxation
   :type: Optional[Ansys.Mechanical.DataModel.Enums.QuadLayerRelaxation]


   
   Gets or sets the relaxation of Quad Layer.
















   ..
       !! processed by numpydoc !!

.. py:property:: ScaleOfDiameter
   :type: Optional[float]


   
   ScaleOfDiameter property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ScopingMethod
   :type: Optional[Ansys.Mechanical.DataModel.Enums.GeometryDefineByType]


   
   Gets or sets the ScopingMethod.
















   ..
       !! processed by numpydoc !!

.. py:property:: Suppressed
   :type: Optional[bool]


   
   Gets or sets the Suppressed.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: WasherAutoDefeature
   :type: Optional[bool]


   
   WasherAutoDefeature property.
















   ..
       !! processed by numpydoc !!

.. py:property:: WasherHeightType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.WasherType]


   
   WasherHeightType property.
















   ..
       !! processed by numpydoc !!

.. py:property:: WasherMethod
   :type: Optional[Ansys.Mechanical.DataModel.Enums.WasherMethod]


   
   WasherMethod property.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> None

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddComment() -> Ansys.ACT.Automation.Mechanical.Comment

   
   Creates a new child Comment.

   ..
       !! processed by numpydoc !!

.. py:method:: AddFigure() -> Ansys.ACT.Automation.Mechanical.Figure

   
   Creates a new child Figure.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImage(filePath: str) -> Ansys.ACT.Automation.Mechanical.Image

.. code-block:: text

   Creates a new child Image.
   If a filePath is provided, the image will be loaded from that file,
   if not, the image will be a screen capture of the Geometry window.

..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> None

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Creates a new parameter for a Property.

   ..
       !! processed by numpydoc !!

.. py:method:: Delete() -> None

   
   Run the Delete action.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: GenerateMesh() -> None

   
   Generate the Mesh.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: bool, children: List[ChildrenType]) -> List[ChildrenType]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> None

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: str) -> None

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: RenameBasedOnDefinition() -> None

   
   Run the RenameBasedOnDefinition action.

   ..
       !! processed by numpydoc !!



.. vale on